examples/test/testpolicy10601.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10601
  namespace: namespace168
spec:
  podSelector:
    matchLabels:
      key44: value33
      key9: value36
      key20: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value37
      podSelector:
        matchLabels:
          key7: value45
          key43: value28
